tests/snapshots/generate_plan_tests__node_vite_solid_ts.snap
---
source: tests/generate_plan_tests.rs
expression: plan
snapshot_kind: text
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "CI": "true",
    "NIXPACKS_METADATA": "node",
    "NIXPACKS_SPA_OUTPUT_DIR": "out",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "staticAssets": {
    "Caddyfile": "# global options\n{\n\tadmin off # theres no need for the admin api in railway's environment\n\tpersist_config off # storage isn't persistent anyway\n\tauto_https off # railway handles https for us, this would cause issues if left enabled\n\t# runtime logs\n\tlog {\n\t\tformat json # set runtime log format to json mode \n\t}\n\t# server options\n\tservers {\n\t\ttrusted_proxies static private_ranges 100.0.0.0/8 # trust railway's proxy\n\t}\n}\n\n# site block, listens on the $PORT environment variable, automatically assigned by railway\n:{$PORT:3000} {\n\t# access logs\n\tlog {\n\t\tformat json # set access log format to json mode\n\t}\n\n\t# health check for railway\n\trewrite /health /*\n\n\t# serve from the 'dist' folder (Vite builds into the 'dist' folder)\n    root * ../app/{$NIXPACKS_SPA_OUTPUT_DIR}\n\n\t# enable gzipping responses\n\tencode gzip\n\n\t# serve files from 'dist'\n\tfile_server \n\n\t# if path doesn't exist, redirect it to 'index.html' for client side routing\n\ttry_files {path} /index.html\n}"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "npm run build"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    },
    "caddy": {
      "name": "caddy",
      "dependsOn": [
        "setup"
      ],
      "nixPkgs": [
        "caddy"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]",
      "cmds": [
        "caddy fmt --overwrite /assets/Caddyfile"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "npm i"
      ],
      "cacheDirectories": [
        "/root/.npm"
      ],
      "paths": [
        "/app/node_modules/.bin"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "nodejs_18",
        "npm-9_x"
      ],
      "nixOverlays": [
        "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
      ],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "exec caddy run --config /assets/Caddyfile --adapter caddyfile 2>&1"
  }
}
